--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+### Unity ###
+# Don't track content of these folders #
+########################################
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -70,3 +75,35 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+
+
+### Renpy - Currently commented out ###
+# Don't track content of these folders #
+########################################
+#cache/
+#saves/
+
+
+# Compiled source #
+###################
+#*.com
+#*.class
+#*.dll
+#*.exe
+#*.o
+#*.so
+
+#*.rpyc
+#*.rpymc
+
+
+# The log file and other misc things #
+######################################
+#log.txt
+#errors.txt
+#traceback.txt
+#files.txt
+
+# End of https://www.toptal.com/developers/gitignore/api/renpy
